# recommender-experiments

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: memo_open_bandit_pipeline.md  memo_policiesモジュール.md  memo_torchrec.md  policies.md  policiesモジュール.md
logs/: evaluation_of_ope_results.csv
src/recommender_experiments/: __main__.py
src/recommender_experiments/app/: microbatch_bandit_example.py  online_bandit_evaluation_example.py
src/recommender_experiments/app/bandit_experiment/: dynamic_content_pool_experiment_marimo.py
src/recommender_experiments/app/cfml_book/: common_utils.py
src/recommender_experiments/app/cost_benefit_experiment/: __main__.py  analyze.ipynb
src/recommender_experiments/app/dynamic_contextual_bandit_experiment/: example_usage.py
src/recommender_experiments/app/logging_policy_experiment/: README.md  __main__.py  analyze.ipynb  expected_reward_function.py  experiment.ipynb  logging_policy.py  opl.py  result.csv  result_opl.csv  より現実に即した実験.ipynb
src/recommender_experiments/app/mind_ml_project/: 1_backfill_feature_groups.py  2_daily_feature_pipeline.py  3_training_pipeline.py  4_batch_inference_pipeline.py  5_dashboard.py  README.md  __init__.py
src/recommender_experiments/app/ope_experiment/: __main__.py
src/recommender_experiments/app/ranking_off_policy_evaluation/: __main__.py  experiment.ipynb
src/recommender_experiments/service/: estimator.py  synthetic_bandit_feedback.py
tests/service/: test_shared_parameter_nn_model.py  test_two_tower_model.py  test_two_tower_nn_model.py
tests/service/dataloader/: test_dataloader.py  test_mind_dataloader.py
tests/service/environment/: test_bandit_environment.py  test_bandit_policy_integration.py  test_dynamic_contextual_bandit_dataset.py  test_news_environment_strategy.py  test_ranking_synthetic_dataset.py  test_synthetic_environment_strategy.py
tests/service/feature/: test_sample_feature.py
tests/service/opl/: test_context_gnn.py  test_contexual_bandit_policy.py  test_lgbm_policy.py  test_shared_parameter_nn_model.py  test_two_tower_nn_model.py
tests/service/ranking_problem/: test_ranking_synthetic_dataset.py
tests/service/simulator/: test_on_policy_learning_simulator.py  test_online_bandit_simulator.py  test_opl_simulator.py
tests/service/utils/: test_expected_reward_functions.py  test_logging_policies.py
tests/test_mind_ml_project/: test_data_loader.py  test_feature_functions.py
反実仮想機械学習_サンプル/: 1.2.1 オンライン実験による方策性能推定.ipynb  1.2.2 ~ 1.2.4 Direct Method (DM), Inverse Propensity Score (IPS), Doubly Robust (DR)推定量.ipynb  utils.py
(+134 files in other folders)
