[tool.poetry]
name = "recommender-experiments"
version = "0.1.0"
description = ""
authors = ["morita <morinota416@gmail.com>"]
readme = "README.md"
packages = [{include = "recommender_experiments", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
obp = "^0.5.7"
matplotlib = "3.4.3"
seaborn = "0.11.2"
typer = "^0.13.0"
loguru = "^0.7.2"
polars = "^1.17.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
