[tool.poetry]
name = "recommender-experiments"
version = "0.1.0"
description = ""
authors = ["morita <morinota416@gmail.com>"]
readme = "README.md"
packages = [{ include = "recommender_experiments", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "3.4.3"
seaborn = "0.11.2"
typer = "^0.13.0"
loguru = "^0.7.2"
polars = "^1.17.1"
pandera = "^0.21.1"
pyarrow = "^18.1.0"
japanize-matplotlib = "^1.1.3"
obp = "^0.5.7"
tqdm-joblib = "^0.0.4"
ruff = "^0.11.2"
multimethod = "1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[tool.pytest.ini_options]
# pytest実行時のwarningを無視する
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
  "ignore::FutureWarning",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
